<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:background="@drawable/round_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/remind"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/erpHit"
            style="@style/item_show_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/erp"
            style="@style/item_show_title"
            android:layout_width="@dimen/qb_px_150"
            app:layout_constraintStart_toEndOf="@+id/erpHit"
            app:layout_constraintTop_toTopOf="@+id/erpHit" />
        <TextView
            style="@style/item_show_title"
            android:id="@+id/trayIdHit"
            app:layout_constraintTop_toBottomOf="@+id/erp"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            style="@style/item_show_title"
            android:id="@+id/trayId"
            android:layout_width="@dimen/qb_px_200"

            app:layout_constraintStart_toEndOf="@+id/trayIdHit"
            app:layout_constraintTop_toTopOf="@+id/trayIdHit"/>

        <TextView
            style="@style/item_show_title"
            android:id="@+id/stockNameHit"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/trayId"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            style="@style/item_show_title"
            android:id="@+id/stockName"
            android:gravity="start"
            android:layout_width="@dimen/qb_px_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stockNameHit"
            app:layout_constraintTop_toTopOf="@+id/stockNameHit"/>
        <TextView
            style="@style/item_show_title"
            android:id="@+id/mFHit"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/stockName"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            style="@style/item_show_title"
            android:id="@+id/mf"
            android:layout_width="@dimen/qb_px_200"
            app:layout_constraintStart_toEndOf="@+id/mFHit"
            app:layout_constraintTop_toTopOf="@+id/mFHit"/>
        <TextView
            style="@style/item_show_title"
            android:id="@+id/preserverHit"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/mf"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            style="@style/item_show_title"
            android:id="@+id/preserver"
            android:layout_width="@dimen/qb_px_200"
            app:layout_constraintStart_toEndOf="@+id/preserverHit"
            app:layout_constraintTop_toTopOf="@+id/preserverHit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E3E3E3"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:padding="@dimen/qb_px_10"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center"
            android:textColor="#358AE4" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#E3E3E3" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center"
            android:textColor="#358AE4" />
    </LinearLayout>
</LinearLayout>